# IC_AGENT

./: .env  Anomaly.py  HuggingFaceEmbeddingCheck.py  Improvements.txt  README.md  Storagefinder.py  crew.py  groq.py  json_dict  main.py  memory.py  memory_manger.py  openapi_embedding_test.py  pyproject.toml  report.md  streamlit_v4.py  test.py  timeseries.py
config/: agents.yaml  tasks.yaml
output/: calculated_goals.xlsx  calculated_goals.xlsxPythonGoalCalculation.xlsx
tools/: GoalSettingCalculation.ipynb  Goal_Calculation.py
