[project]
name = "icagents"
version = "0.1.0"
description = "ICAgents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
icagents = "icagents.main:run"
run_crew = "icagents.main:run"
train = "icagents.main:train"
replay = "icagents.main:replay"
test = "icagents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
